--- a/.docs/README.hbs
+++ b/.docs/README.hbs
@@ -313,9 +313,9 @@ port.write(new Buffer('Hi Mom!'));
 
 Enjoy and do cool things with this code.
 
-{{#modules~}}
+{{#class name="SerialPort"}}
 {{>members~}}
-{{/modules}}
+{{/class}}
 
 ## Command Line Tools
 If you install `serialport` globally. (eg, `npm install -g serialport`) you'll receive two command line tools.
